Update the  index file

--- a/Flex-Gallery/index.html
+++ b/Flex-Gallery/index.html
@@ -18,18 +18,65 @@
     <div class="three">3</div>
     <div class="four">4</div>
 </div>-->
+<style>
+    .fit-image{
+        height: 100%;
+        width: 100%;
+    }
+</style>
 
 <section class="section-padding" id="portfolio">
     <div class="container">
         <div class="row">
             <div id="my-grid" class="grid-padding">
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-sm-3">
                         <div class="row">
-                            <img src="Images/gallert.jpg" class="fit-image" alt="Alternate Text" />
+                            <img src="Images/Tour/tour1.png"  class="fit-image" alt="Alternate Text" />
+                          
                         </div>
                     </div>
-                </div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <img src="Images/Tour/tour2.png" class="fit-image" alt="Alternate Text" />
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <img src="Images/Tour/tour3.png" class="fit-image" alt="Alternate Text" />
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <img src="Images/Tour/tour4.png" class="fit-image" alt="Alternate Text" />
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <img src="Images/Tour/tour5.png" class="fit-image" alt="Alternate Text" />
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <img src="Images/Tour/tour6.png" class="fit-image" alt="Alternate Text" />
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <img src="Images/Tour/tour7.png" class="fit-image" alt="Alternate Text" />
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <img src="Images/Tour/tour8.png" class="fit-image" alt="Alternate Text" />
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="row">
+                            <img src="Images/Tour/tour9.png" class="fit-image" alt="Alternate Text" />
+                        </div>
+                    </div>
+                  </div>
             </div>
         </div>
     </div>
